fixed rental form alignment

--- a/src/App.css
+++ b/src/App.css
@@ -65,12 +65,6 @@ select {
   margin-top: 40px;
 }
 
-.login-form {
-}
-
-.login-input {
-}
-
 .login-input-text > input {
   margin-top: 20px;
   width: 80%;
@@ -81,3 +75,10 @@ select {
   text-align: center;
   margin-top: 30px;
 }
+
+.rental-input {
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
+}
+
